--- a/TestPlatform/appsettings.Development.json
+++ b/TestPlatform/appsettings.Development.json
@@ -4,5 +4,14 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "JwtSettings": {
+    "Issuer": "TestPlatform.com",
+    "Audience": "PhoneApp",
+    "SecretKey": "bf1b3220-1fa3-40b6-a4ec-3684d89f292d",
+    "ExpirationInMinutes": 600
+  },
+  "ConnectionStrings": {
+    "PostgresSQL": "Server=127.0.0.1; Database=TestPlatform; Trusted_Connection=true; MultipleActiveResultSets=true"
   }
 }
