--- a/TestPlatform.Infrastructure/TestPlatform.Infrastructure.csproj
+++ b/TestPlatform.Infrastructure/TestPlatform.Infrastructure.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.10" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.32.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TestPlatform.Domain\TestPlatform.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
