--- a/TestPlatform/appsettings.Development.json
+++ b/TestPlatform/appsettings.Development.json
@@ -12,6 +12,6 @@
     "ExpirationInMinutes": 600
   },
   "ConnectionStrings": {
-    "PostgresSQL": "Server=127.0.0.1; Database=TestPlatform; Trusted_Connection=true; MultipleActiveResultSets=true"
+    "PostgresSQL": "Host=127.0.0.1;Port=5432;Database=TestPlatform;Username=postgres;Password=h1udjmkz0MY29w$"
   }
 }
