--- a/TestPlatform/appsettings.Development.json
+++ b/TestPlatform/appsettings.Development.json
@@ -12,6 +12,6 @@
     "ExpirationInMinutes": 600
   },
   "ConnectionStrings": {
-    "PostgresSQL": "Host=127.0.0.1;Port=5432;Database=TestPlatform;Username=postgres;Password=h1udjmkz0MY29w$"
+    "MSSQLServer": "Server=(localdb)\\MSSQLLocalDB;Database=db_a9ed02_cosoj13558;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
   }
 }
