--- a/TestPlatform/appsettings.json
+++ b/TestPlatform/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "JwtSettings": {
+    "Issuer": "TestPlatform.com",
+    "Audience": "PhoneApp",
+    "SecretKey": "bf1b3220-1fa3-40b6-a4ec-3684d89f292d",
+    "ExpirationInMinutes": 600
+  },
+  "ConnectionStrings": {
+    "MSSQLServer": "Server=SQL8006.site4now.net;Database=db_a9ed02_testplatform;User=db_a9ed02_testplatform_admin;Password=cosoj13558@games"
+  }
 }
