Add Photo and user unique edited

--- a/TestPlatform.Services/TestPlatform.Services.csproj
+++ b/TestPlatform.Services/TestPlatform.Services.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="FluentValidation" Version="11.7.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="6.0.0-preview.4.21253.5" />
   </ItemGroup>
 
   <ItemGroup>
