Exam and solved

--- a/TestPlatform/appsettings.Development.json
+++ b/TestPlatform/appsettings.Development.json
@@ -12,6 +12,6 @@
     "ExpirationInMinutes": 600
   },
   "ConnectionStrings": {
-    "MSSQLServer": "Server=(localdb)\\MSSQLLocalDB;Database=db_a9ed02_cosoj13558;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+    "MSSQLServer": "Server=SQL8006.site4now.net;Database=db_a9ed02_testplatform;User=db_a9ed02_testplatform_admin;Password=cosoj13558@games"
   }
 }
